folder structure is done

--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,9 @@
     "require-css": "0.1.1",
     "requirejs": "https://github.com/jrburke/requirejs.git#2.1.18",
     "requirejs-plugins": "1.0.2",
-    "google-analytics": "~0.1.0"
+    "google-analytics": "~0.1.0",
+    "highcharts-custom-events": "^2.0.6",
+    "highcharts": "^5.0.7"
   },
   "resolutions": {
     "es6-promise": "~v3.0.2",
@@ -56,6 +58,9 @@
     "web-animations-js": "^2.2.0",
     "polymer-font-awesome": "~0.1.0",
     "px-mixins-design": "^0.3.0",
-    "px-defaults-design": "^1.0.2"
+    "px-defaults-design": "^0.3.0",
+    "px-typography-design": "^1.2.0",
+    "px-colors-design": "^0.3.0",
+    "px-functions-design": "~1.0.0"
   }
 }
